# C-CPP-Library-Project-Tests-Examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/: CMakeLists.txt  example.c
Tests/: CMakeLists.txt
YourProject/: CMakeLists.txt
YourProject/Headers/yourproject/: CMakeLists.txt  export.h  yourproject.h
YourProject/Sources/: CMakeLists.txt
YourProject/Sources/yourproject/: CMakeLists.txt  yourproject.c
